--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </template>
 
     <template id="tem3">
-      <input type="text" id="searchPoke" placeholder="Buscar Pokemom por Nombre o ID">
+      <input type="text" id="searchPoke" placeholder="Buscar Pokemom por Nombre o ID" autocomplete="off">
       <div id="search2">
         <span class="material-icons-outlined buscar1">travel_explore</span>
       </div>
